1.0.4 - [RELEASEDATE]
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Implemented issue #14429: Support for Solr 1.3.
- Implemented issue #14594: provide body of error pages.


1.0.3 - Monday 09 February 2009
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Fixed issue #14159: ezcSearchQueryBuilder() does not handle colons properly
  in search strings for Solr.


1.0.2 - Monday 01 December 2008
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Fixed issue #13908: Search component's SolR handler should respect HTTP
  status codes. (Initial patch by Alexander M. Turek).


1.0.1 - Monday 10 November 2008
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Fixed issue #13891: ezcSearchNetworkException is used, but does not exist.
- Fixed issue with sending incorrect HTTP requests to Solr.
- Fixed issue with regards to respecting HTTP Connection: close headers when
  talking to Solr.


1.0 - Monday 16 June 2008
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- No changes.


1.0rc1 - Tuesday 10 June 2008
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Changed the way how ezcSearchQueryBuilder works. You will now have to
  run parseSearchQuery() instead of just passing the query object, query
  string and fields to the constructor.
- Changed the nested array result for documents into a structure where each
  ezcSearchResult contains an array of ezcSearchResultDocument objects, which
  on its turn contain the score, highlighting and document itself.
- Changed the default limit fo returned search results for the Solr handler
  from 10 to unlimited (well, 999999).


1.0alpha2 - Tuesday 13 May 2008
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Fixes to the Solr handler:

    - Implemented missing "order by" support.
    - Fixed between support.